# robot-code-2024

./: .gitignore  .installer_config  .pre-commit-config.yaml  frc  frc.bat  offset.ua  pyproject.toml  readme.md  test.file  verify  verify.bat
deploy/pathplanner/autos/: Circle Auto.auto
deploy/pathplanner/paths/: wherethespeakerat.path
dev-utils/path_json/: Biangle.path  Gollum'sBetterQuest.path  Gollum'sExtensiveQuest.json  Gollum'sExtensiveQuest.path  PettyTheft.json  PettyTheft.path  path2jsonConverter.py
dev-utils/rlds/: deploy
pathplanner/paths/: quotes(Circle).path
src/: config.py  firehouse-apriltags.json  robot.py  swerve.py
src/.wpilib/: wpilib_preferences.json
src/api/: __init__.py  drive.py  units.py
src/autos/: 1noteblue.json  4notered.json  BackUp.json  Biangle.json  Gollum'sAmplifiedQuest.json  Gollum'sBetterQuest.json  Gollum'sBlueAmplifiedQuest.json  Gollum'sBlueSideQuest.json  Gollum'sEvenBetterQuest.json  Gollum'sEvenRedderQuest.json  Gollum'sExtensiveQuest.json  Gollum'sGoofyBlueQuest.json  Gollum'sGoofyQuest.json  Gollum'sMiddleEarthQuest.json  Gollum'sPracticeQuest.json  Gollum'sRedstensiveQuest.json  Gollum'sResourcefulQuest.json  Gollum'sReverseEarthQuest.json  Gollum'sReverseEarthQuest_old.json  Gollum'sReversefulQuest.json  Gollum'sSideQuest.json  Gollum'sUltraBlueSideQuest.json  Gollum'sUltraSideQuest.json  PettyTheft.json  SourceSide.json  SourceSideBlue.json  graph.json
src/commands/: aim_at_amp.py  aim_at_pitch.py  aim_at_speaker.py  auto_auto_aim.py  chase_note.py  command_test_gather.py  command_test_shoot.py  continuous_aim_at_speaker.py  continuous_chase_note.py  drive_to_pose.py  forage.py  gather.py  graph_auto.py  graph_pathfind.py  measure_time.py  require_note.py  shoot.py
src/config/: README.md  config-2022-swerve-chassis.toml
src/subsystems/: amp_scorer.py  chassis.py  climber.py  config.py  drive.py  eeby_client.py  feeder.py  gatherer.py  led.py  note_vision.py  odometry.py  shooter.py  swerve.py  turn_signals.py  vision.py
src/utils/: graph.py  read_auto.py
utils/path_json/: ReadPath.json  ReadPath.path  path2jsonConverter.py  reader.py
