[tool.poetry]
name = "robot-code-2024"
version = "0.1.0"
description = ""
authors = ["Ishaan Sen <ishaan.sen100@gmail.com", "Nikhil Iyer <iyer.h.nikhil@gmail.com>", "Omkar Subramaniam <omnikar5@gmail.com>", "Aneesha Guna <aneesha.guna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
robotpy = {extras = ["navx", "rev", "phoenix6", "pathplannerlib"], version = "^2024.1.1.2"}
photonlibpy = "^2024.2.4"
astar = "^0.99"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pylint = "^2.17.4"
python-lsp-server = "^1.7.4"
isort = "^5.12.0"

[tool.poetry.scripts]
deploy = 'robot.py:main'
console = ''

[tool.mypy]
# warn_return_any = true
# disallow_untyped_defs = true
# disallow_untyped_calls = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
